Added business logic to API, along with backend unit tests and vue3 frontend

--- a/retrospectives-api/retrospectives-api-unit-tests/retrospectives-api-unit-tests.csproj
+++ b/retrospectives-api/retrospectives-api-unit-tests/retrospectives-api-unit-tests.csproj
@@ -22,4 +22,8 @@
         </PackageReference>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\retrospectives-api\retrospectives-api.csproj" />
+    </ItemGroup>
+
 </Project>
